# spotify-lyrics-reco

./: .env-example  .gitignore  Dockerfile  README.md  gcp_cloud_run_guide.md  main.py  pyproject.toml
src/: bigquery_schemas.sql
src/clients/: bigquery_client.py  embedding_client.py  lyrics_client.py  mongo_client.py  spotify_client.py
src/config/: bigquery_client.py  logging.py  settings.py  spotify_client.py
src/models/: album_analysis.py
src/pipelines/: ingest_album_cli.py  ingest_album_pipeline.py
src/services/: __init__.py  album_analysis_service.py  album_ingest_service.py  album_service.py  lyrics_embedding_service.py  lyrics_search_service.py  track_service.py
